package com.mastermind.models;


public interface Session {
    StateValue getValueState();
}
