package utils;

public abstract class Command {

    protected String title;

    public Command(String title) {
        this.title = title;
    }

    protected abstract void execute();

    protected abstract boolean isActive();

    String getTitle() {
        return this.title;
    }
}
